# tetris-trainer

./: .gitignore  README.md  cli_menu.py  live_view.py  play.py  pyproject.toml  quickstart.bat  quickstart.sh  requirements.txt  resume_training.py  tetris_env.py  train_offline.py  trainer.py
tests/: test_env.py  test_render.py
tetris_env/: __init__.py  constants.py  core.py  env.py  renderer.py  train_utils.py
