[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tetris-env"
version = "0.1.0"
description = "Gym compatible Tetris environment"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["tetris_env*"]
